# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linfa_vi"
version = "0.0.0"
description = "A Python library for inference with normalizing flow and annealing"
readme = "README.md"
authors = [{ name = "resDesLab ", email = "daniele.schiavazzi@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["variational inference", "normalizig flow", "adaptive annealing", "physics-based modeling"]
dependencies = [
    "torch==1.13.1",
    "numpy==1.22",
    "scipy==1.7.3",
    'tomli; python_version < "3.11"',    
]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["linfa"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/desResLab/LINFA"

[tool.bumpver]
current_version = "2023.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

