# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linfa_vi"
version = "1.5.8"
description = "A Python library for inference with normalizing flow and annealing"
readme = "README.md"
authors = [{ name = "resDesLab ", email = "daniele.schiavazzi@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["variational inference", "normalizig flow", "adaptive annealing", "physics-based modeling"]
dependencies = [
    "torch==1.13.1",
    "numpy",
    "matplotlib",
    "ipython",
    'tomli; python_version < "3.11"',
    "coverage",
]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["linfa", "linfa.models", "linfa.tests"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/desResLab/LINFA"
